--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "name": "d3mo17/colja-examples",
-    "version": "0.9.1",
+    "version": "0.9.2",
     "type": "project",
     "license": "mit",
-    "keywords": ["symfony", "graphql", "examples"],
+    "keywords": ["symfony", "siler", "graphql", "examples"],
     "require": {
         "php": ">=7.1.3",
         "ext-ctype": "*",
